<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/fl_car_product_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_car_product_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:background="@color/bk_gray" >

            <ImageView
                android:id="@+id/img_car_product"
                android:layout_width="140dp"
                android:layout_height="160dp"
                android:background="@drawable/product_img_borders"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/image_not_found" />

            <TextView
                android:id="@+id/tv_car_product_title"
                android:layout_width="232.5dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/neque_porro_quisquam_est_qui_dolorem_ipsum_quia_dolor_sit_amet_consectetur_adipisci_velit"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/img_car_product"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2.5dp"
                android:text="@string/us"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/img_car_product"
                app:layout_constraintTop_toBottomOf="@+id/tv_car_product_title" />

            <TextView
                android:id="@+id/tv_car_product_int_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="-2dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="22.5sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tv_usd"
                app:layout_constraintTop_toBottomOf="@+id/tv_car_product_title" />

            <TextView
                android:id="@+id/tv_car_product_decimal_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:layout_marginStart="2dp"
                android:text="@string/decimalprice"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tv_car_product_int_price"
                app:layout_constraintTop_toTopOf="@+id/tv_car_product_int_price" />

            <TextView
                android:id="@+id/tv_avaibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/disponible"
                android:textColor="#216426"
                app:layout_constraintStart_toEndOf="@+id/img_car_product"
                app:layout_constraintTop_toBottomOf="@+id/tv_usd" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_car_product">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/white_rounded_button" >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="140dp"
                        android:layout_height="match_parent" >

                        <ImageButton
                            android:id="@+id/img_button_reduce"
                            android:layout_width="40dp"
                            android:layout_height="35dp"
                            android:background="@drawable/trash_btn_shape"
                            android:padding="9dp"
                            android:scaleType="fitCenter"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/trash"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                        <TextView
                            android:id="@+id/tv_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_1"
                            android:textColor="#196a7a"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/img_button_add"
                            app:layout_constraintStart_toEndOf="@+id/img_button_reduce"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/img_button_add"
                            android:layout_width="40dp"
                            android:layout_height="35dp"
                            android:background="@drawable/add_btn_shape"
                            android:padding="8dp"
                            android:scaleType="fitCenter"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/add"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </FrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/white_rounded_button"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/eliminar"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                app:layout_constraintStart_toEndOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/img_car_product"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_rounded_button"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/guardar_para_m_s_tarde"
                android:textAllCaps="false"
                app:layout_constraintStart_toEndOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/btn_delete"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btn_compare"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_rounded_button"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/comparar_con_art_culos_similares"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_save"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>