<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/bk_white"
    tools:context=".ProductsRecyclerView" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ProductBackground" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_product_image"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:background="@drawable/product_img_borders"
                android:src="@drawable/image_not_found"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_product_title"
                android:layout_width="232.5dp"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:lineSpacingExtra="6dp"
                android:maxLines="3"
                android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_product_stars"
                android:layout_width="93dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/img_product_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_title"
                app:srcCompat="@drawable/amazon_stars_4" />

            <TextView
                android:id="@+id/tv_product_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="reviews"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/img_product_stars"
                app:layout_constraintStart_toEndOf="@+id/img_product_stars"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_title" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2.5dp"
                android:text="@string/us"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/img_product_image"
                app:layout_constraintTop_toBottomOf="@+id/img_product_stars" />

            <TextView
                android:id="@+id/tv_product_int_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="6dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="22.5sp"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_reviews" />

            <TextView
                android:id="@+id/tv_product_dec_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="@string/decimalprice"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/tv_product_int_price"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_reviews" />

            <TextView
                android:id="@+id/tv_product_shipping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Con envíos a Ecuador"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_product_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_int_price" />

            <TextView
                android:id="@+id/tv_product_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="1dp"
                android:text="OldPrice"
                app:layout_constraintBottom_toBottomOf="@+id/tv_product_int_price"
                app:layout_constraintStart_toEndOf="@+id/tv_product_dec_price" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>